# tfmpe

./: .gitattributes  .gitignore  404.html  CLAUDE.md  CONTRIBUTING.md  NEWS.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.claude/commands/: create-spec.md  create_spec.md  execute_spec.md
.claude/specs/estimator/: design.md  requirements.md  tasks.md
.claude/specs/init_repo/: design.md  requirements.md  tasks.md
.claude/specs/processing/: design.md  requirements.md  tasks.md
.claude/specs/transformer/: design.md  requirements.md  tasks.md
.claude/steering/: package.md  structure.md  tech.md
.claude/templates/: requirements-template.md  tasks-template.md
.github/: pull_request_template.md
.github/workflows/: docs.yml  lint.yml  test.yml  typecheck.yml
api/: index.html
docs/: api.md  index.md
search/: search_index.json
test/: conftest.py
test/estimators/: __init__.py  test_ode.py
test/test_estimators/: conftest.py
test/test_nn/test_transformer/: conftest.py  (+4 more)
test/test_preprocessing/: conftest.py  test_combine.py  test_flatten.py  test_functional_inputs.py  test_generation.py  test_labeller.py  test_masks.py  test_reconstruct.py  test_tokens_basic.py  test_tokens_dynamic.py
tfmpe/: __init__.py
tfmpe/bijectors/: __init__.py
tfmpe/estimators/: __init__.py  ode.py
tfmpe/metrics/: __init__.py
tfmpe/nn/: __init__.py  mlp.py
tfmpe/preprocessing/: __init__.py  combine.py  flatten.py  functional_inputs.py  generator.py  masks.py  reconstruct.py  token_view.py  tokens.py  utils.py
tfmpe/sampling/: __init__.py
(+6 files in other folders)
