[project]
name = "tfmpe"
description = "Tokenised Flow Matching for Posterior Estimation"
authors = [{name = "Giovanni Charles", email = "giovanni.charles@gmail.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "jax>=0.9.0",
    "flax>=0.11.0",
    "optax>=0.1.3",
    "jaxtyping>=0.2.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/giovannic/tfmpe"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pyright>=1.1.0",
    "pytest-benchmark>=4.0.0",
    "ruff>=0.14.0"
]
examples = [
    "matplotlib>=3.6.2",
    "seaborn>=0.12.2",
    "hydra-core>=1.3.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.6.0",
    "mkdocstrings[python]>=0.30.0",
]

[tool.setuptools]
packages = ["tfmpe"]

[tool.pytest.ini_options]
testpaths = ["test"]
markers = [
    "slow: marks tests as slow (deselected by default)",
    "speed: marks tests as speed benchmarks (deselected by default)",
    "scale: marks tests as scale benchmarks (deselected by default)",
]
addopts = "-v --tb=short -m 'not slow and not speed and not scale'"

[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"
